<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/act1_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        />

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"
        app:layout_constraintBottom_toTopOf="@+id/btnDial"
        app:layout_constraintEnd_toEndOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_dial"
        app:layout_constraintBottom_toTopOf="@+id/btnMail"
        app:layout_constraintEnd_toEndOf="@id/btnWeb"
        app:layout_constraintStart_toStartOf="@id/btnWeb"
        app:layout_constraintTop_toBottomOf="@+id/btnWeb"
        />

    <Button
        android:id="@+id/btnMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_mail"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="@id/btnDial"
        app:layout_constraintStart_toStartOf="@id/btnDial"
        app:layout_constraintTop_toBottomOf="@+id/btnDial"
        />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera"
        app:layout_constraintBottom_toTopOf="@+id/btnToast"
        app:layout_constraintEnd_toEndOf="@id/btnMail"
        app:layout_constraintStart_toStartOf="@id/btnMail"
        app:layout_constraintTop_toBottomOf="@+id/btnMail"
        />

    <Button
        android:id="@+id/btnToast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_toast"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="@id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_nxt"
        app:layout_constraintEnd_toEndOf="@id/btnToast"
        app:layout_constraintStart_toStartOf="@id/btnToast"
        app:layout_constraintTop_toBottomOf="@+id/btnToast"
        />

</androidx.constraintlayout.widget.ConstraintLayout>